tdf#163680: fix fixed-length strings assignment

Change-Id: I4aa8144df5dfb836ad0689c7855301b8b04da485
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175878
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit de4ef353503c794f72e6e0bbca41fd5beb25aafe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175903
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>